# runelite-quest-voiceover

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  build.gradle  cli-main.py  commitlint.config.js  package.json  pixi.toml  pronunciation_dictionary.pls  pyproject.toml  quest_voiceover.db  quest_voiceover_v1.db  release-please-config.json  runelite-plugin.properties  settings.gradle  tsconfig.json
gradle/: verification-metadata.dryrun.xml  verification-metadata.xml
pipeline/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pronunciation_dictionary.pls  tsconfig.json
scripts/: extract-transcript.ts  extract_transcript.py  publish-plugin.sh
src/: service.ts
transcripts/: a-kingdom-divided.json  a-night-at-the-theatre.json  a-porcine-of-interest.json  a-souls-bane.json  a-tail-of-two-cats.json  a-taste-of-hope.json  alfred-grimhands-barcrawl.json  animal-magnetism.json  another-slice-of-h-a-m.json  architectural-alliance.json  at-first-light.json  barbarian-training.json  bear-your-soul.json  below-ice-mountain.json  beneath-cursed-sands.json  between-a-rock.json  big-chompy-bird-hunting.json  biohazard.json  black-knights-fortress.json  bone-voyage.json  cabin-fever.json  children-of-the-sun.json  client-of-kourend.json  clock-tower.json  cold-war.json  contact.json  cooks-assistant.json  creature-of-fenkenstrain.json  current-affairs.json  curse-of-the-empty-lord.json  daddys-home.json  darkness-of-hallowvale.json  death-on-the-isle.json  death-plateau.json  death-to-the-dorgeshuun.json  (+165 more)
(+89 files in other folders)
