[tool.poetry]
name = "osrs-voiceover-generator"
version = "0.1.0"
description = "generates voice over files by scrapping the osrs wiki for quest transcripts, and using the Elevenlabs SDK to generate voiceovers for them."
authors = ["Kevin Orel Edry <techg9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ffmpeg = "^1.4"
elevenlabs = "^1.3.1"
pydub = "^0.25.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
ffmpeg-python = "^0.2.0"
prompt-toolkit = "^3.0.47"
tqdm = "^4.66.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
